# frigate-tools

./: .gitignore  README.md  pyproject.toml
.beads/: deletions.jsonl  issues.jsonl
.github/: copilot-instructions.md
prototypes/: PARALLEL_SEEK_RESULTS.md  image2pipe.py  parallel_seek.py  two_pass_bsf.py
src/frigate_tools/: __init__.py  cli.py  clip.py  file_list.py  grid.py  observability.py  timelapse.py
tests/: __init__.py  test_cli.py  test_clip.py  test_e2e.py  test_file_list.py  test_grid.py  test_observability.py  test_timelapse.py
